--- a/index.html
+++ b/index.html
@@ -1,103 +1,16 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="VacantMapCompare : " />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>VacantMapCompare</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/TNeas/VacantsPleaseWork">View on GitHub</a>
-
-          <h1 id="project_title">VacantMapCompare</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/TNeas/VacantsPleaseWork/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/TNeas/VacantsPleaseWork/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">VacantMapCompare maintained by <a href="https://github.com/TNeas">TNeas</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
-</html>
-=======
-=======
->>>>>>> fd3b58996261d56407c478850c7263837713bd77
-=======
->>>>>>> fd3b58996261d56407c478850c7263837713bd77
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=7, IE=9, IE=10">
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="//jsdev.arcgis.com/3.8/js/dojo/dijit/themes/tundra/tundra.css">
-    <link rel="stylesheet" type="text/css" href="//jsdev.arcgis.com/3.8/js/esri/css/esri.css" />
-    <link rel="stylesheet" type="text/css" href="css/layout.css" />
-    <script type="text/javascript">
-    var path_location = location.pathname.replace(/\/[^/]+$/, '');
-    var dojoConfig = {
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=7, IE=9, IE=10">
+<title></title>
+<link rel="stylesheet" type="text/css" href="//jsdev.arcgis.com/3.8/js/dojo/dijit/themes/tundra/tundra.css">
+<link rel="stylesheet" type="text/css" href="//jsdev.arcgis.com/3.8/js/esri/css/esri.css" />
+<link rel="stylesheet" type="text/css" href="css/layout.css" />
+<script type="text/javascript">
+var path_location = location.pathname.replace(/\/[^/]+$/, '');
+var dojoConfig = {
     parseOnLoad: true,
     packages: [{
             name: "esriTemplate",
@@ -110,16 +23,17 @@ $ git checkout gh-pages
             location: path_location
         }
     ]
-    };
-    </script>
-    <script type="text/javascript" src="//jsdev.arcgis.com/3.8/"></script>
-    <script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js"></script>
-    <script type="text/javascript" src="javascript/map.js"></script>
-    <script type="text/javascript" src="javascript/layout.js"></script>
-    <script type="text/javascript">
-    function init() {
+};
+</script>
+<script type="text/javascript" src="//jsdev.arcgis.com/3.8/"></script>
+<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="javascript/map.js"></script>
+<script type="text/javascript" src="javascript/layout.js"></script>
+<script type="text/javascript">
+function init() {
     dojo.require("utilities.app");
     dojo.require("templateConfig.commonConfig");
+
     var defaults = {
         //The ID for the map from ArcGIS.com. Maximum of 3 maps.
         webmaps: [{
@@ -128,11 +42,12 @@ $ git checkout gh-pages
                 'id': 'ffeab5818d8f44598997d84ecfc50dd4'
             }, {
                 'id': 'b7fc1495be954a6189a5ffa65764f9d7'
-            }],
+            }
+        ],
         //Enter a title, if no title is specified, the webmap's title is used.
         title: "Vacant Buildings in Baltimore",
         //Enter a subtitle, if not specified the ArcGIS.com web map's summary is used
-        subtitle: "Maps still loading? Try clicking on the zoom button",
+        subtitle: "Maps still loading? Try clicking on the "zoom in" button.",
         //Display legend on map
         legend: true,
         //Display description on map
@@ -147,23 +62,46 @@ $ git checkout gh-pages
         bingmapskey: commonConfig.bingMapsKey,
         helperServices:commonConfig.helperServices  
     };
+
+
     var app = new utilities.App(defaults);
     app.init().then(function (options) {
         initMap(options);
     });
-    }
-    //show map on load
-    dojo.addOnLoad(init);
+}
+
+ //show map on load
+dojo.addOnLoad(init);
+</script>
+<!-- START OMNITURE // hive:metrics-tribune -->
+<!-- SiteCatalyst code version: H.1. Copyright 1997-2005 Omniture, Inc. More info available at http://www.omniture.com -->
+    <script type="text/javascript">adblock=true;</script>
+    <script type="text/javascript" src="http://www.baltimoresun.com/hive/javascripts/metrics/adframe.js"></script>
+    <script type="text/javascript" src="http://www.baltimoresun.com/hive/javascripts/metrics/s_code_trb.js"></script>
+    <script language="JavaScript">
+        s.pageName="databases - Baltimore Sun - 3rd Party."
+        s.server="www.baltimoresun.com" 
+        s.channel="Baltimore Sun:data"
+        s.prop38="3rd Party";
+        s.eVar21="3rd Party";
+        s.hier1="Baltimore Sun:data:databases"
+        s.hier2="data:databases"
+            var s_code=s.t();if(s_code)document.write(s_code) 
     </script>
-    <style type="text/css">
-    .esriLegendServiceLabel {
-        display:none;
-    }
-    </style>
+    <script language="JavaScript">
+        if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
+    </script><!--/DO NOT REMOVE/-->
+<!-- End SiteCatalyst code version: H.1. -->
+
+<style type="text/css">
+.esriLegendServiceLabel {
+    display:none;
+}
+</style>
 </head>
 
 <body class="tundra">
-    <div id="mainWindow" dojotype="dijit.layout.BorderContainer" design="headline" gutters="false" style="width:100%; height:100%;">
+<div id="mainWindow" dojotype="dijit.layout.BorderContainer" design="headline" gutters="false" style="width:100%; height:100%;">
 <!-- Header Section-->
 <div id="header" dojotype="dijit.layout.BorderContainer" gutters="false" region="top">
     <div id="banner" dojotype="dijit.layout.ContentPane" region="top">
@@ -171,9 +109,7 @@ $ git checkout gh-pages
             <div id="title"></div>
             <div id="subtitle"></div>
         </div>
-        <div id="logoArea">
-            <img src="images/bs-logo.png" alt="logo">
-        </div>
+        <div id="logoArea"></div>
     </div>
     <div id="controls" dojotype="dijit.layout.ContentPane" region="center"> <span id="syncHead"></span>: <span id="scaleCheck" class="checkboxToggle"><span id="syncScale" class="checkbox checked">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span id="scale"></span></span>&nbsp;&nbsp;<span id="locCheck" class="checkboxToggle"><span id="syncLoc" class="checkbox checked">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
         <span
@@ -238,13 +174,4 @@ $ git checkout gh-pages
 </div>
 </body>
 
-<<<<<<< HEAD
-<<<<<<< HEAD
 </html>
->>>>>>> fd3b58996261d56407c478850c7263837713bd77
-=======
-</html>
->>>>>>> fd3b58996261d56407c478850c7263837713bd77
-=======
-</html>
->>>>>>> fd3b58996261d56407c478850c7263837713bd77
