--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@ function init() {
                 'id': 'ffeab5818d8f44598997d84ecfc50dd4'
             }, {
                 'id': 'b7fc1495be954a6189a5ffa65764f9d7'
-            }
-        ],
+            }],
         //Enter a title, if no title is specified, the webmap's title is used.
         title: "Vacant Buildings in Baltimore",
         //Enter a subtitle, if not specified the ArcGIS.com web map's summary is used
-        subtitle: "Maps still loading? Try clicking on the "zoom in" button.",
+        subtitle: "Maps still loading? Try clicking on the zoom button.",
         //Display legend on map
         legend: true,
         //Display description on map
