--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ dojo.addOnLoad(init);
 <!-- Header Section-->
 <div id="header" dojotype="dijit.layout.BorderContainer" gutters="false" region="top">
     <div id="banner" dojotype="dijit.layout.ContentPane" region="top">
+        <div id="logo"></div>
         <div id="headerText">
             <div id="title"></div>
             <div id="subtitle"></div>
