--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ dojo.addOnLoad(init);
             <div id="title"></div>
             <div id="subtitle"></div>
         </div>
-        <a href="http://www.baltimoresun.com/"><img id="logoArea" scr="images/bs-logo.png"></a>
+        <div id="logoArea"></div>
     </div>
     <div id="controls" dojotype="dijit.layout.ContentPane" region="center"> <span id="syncHead"></span>: <span id="scaleCheck" class="checkboxToggle"><span id="syncScale" class="checkbox checked">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span id="scale"></span></span>&nbsp;&nbsp;<span id="locCheck" class="checkboxToggle"><span id="syncLoc" class="checkbox checked">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
         <span
