--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function init() {
         //Enter a title, if no title is specified, the webmap's title is used.
         title: "Vacant Buildings in Baltimore",
         //Enter a subtitle, if not specified the ArcGIS.com web map's summary is used
-        subtitle: "Maps still loading? Try clicking on the zoom button.",
+        subtitle: "What is the effect of vacant buildings on the city?",
         //Display legend on map
         legend: true,
         //Display description on map
