--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@ dojo.addOnLoad(init);
     </script><!--/DO NOT REMOVE/-->
 <!-- End SiteCatalyst code version: H.1. -->
 
+<script>
+jQuery(document).ready(function(){
+alert('hello');
+});
+//jQuery('.esriSimpleSliderIncrementButton').click()
+    
+</script>
+
 <style type="text/css">
 .esriLegendServiceLabel {
     display:none;
