--- a/index.html
+++ b/index.html
@@ -95,10 +95,9 @@ dojo.addOnLoad(init);
 
 <script>
 jQuery(document).ready(function(){
-alert('hello');
+    alert('hello');
+    jQuery('.esriSimpleSliderIncrementButton').click();
 });
-//jQuery('.esriSimpleSliderIncrementButton').click()
-    
 </script>
 
 <style type="text/css">
