--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@ dojo.addOnLoad(init);
         if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
     </script><!--/DO NOT REMOVE/-->
 <!-- End SiteCatalyst code version: H.1. -->
+<script>
+jQuery(document).ready(function(){
+    console.log('hello');
+    jQuery('.esriSimpleSliderIncrementButton').click();
+});
+</script>
 
 <style type="text/css">
 .esriLegendServiceLabel {
