--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ dojo.addOnLoad(init);
     </script>
     <script language="JavaScript">
         if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
-    </script><!--/DO NOT REMOVE/-->
+    </script><!-- DO NOT REMOVE -->
 <!-- End SiteCatalyst code version: H.1. -->
 <script>
 jQuery(document).ready(function(){
