--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@ dojo.addOnLoad(init);
 <script>
 jQuery(document).ready(function(){
     setTimeout(function(){
-        jQuery('.esriSimpleSliderIncrementButton').click();
+        //jQuery('.esriSimpleSliderIncrementButton').click();
+        jQuery("#loadingCon").hide();
     },3000);
     });
 </script>
