--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ dojo.addOnLoad(init);
 <!-- End SiteCatalyst code version: H.1. -->
 <script>
 jQuery(document).ready(function(){
+    jQuery("#headerText").hide();
     setTimeout(function(){
         //jQuery('.esriSimpleSliderIncrementButton').click();
         jQuery("#loadingCon").hide();
