--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ jQuery(document).ready(function(){
     <div id="banner" dojotype="dijit.layout.ContentPane" region="top">
         <a href="http://www.baltimoresun.com/"><div id="logo"></div></a>
         <div id="headerText">
-            <div id="title"></div>
-            <div id="subtitle"></div>
+            <div id="title"><h1>Vacant Buildings in Baltimore</h1></div>
+            <div id="subtitle"><h3>What is the effect of vacants on the city&#63;</h3></div>
         </div>
     </div>
     <div id="controls" dojotype="dijit.layout.ContentPane" region="center"> 
