--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ jQuery(document).ready(function(){
     <div id="loadingHeader"></div>
         <div id="loading"><span id="loadText"></span>
         <br />
-        <div><p>Still loading&#63; Try moving the map.</p></div>
+        <div><h5>Still loading&#63; Try moving the map.</h5></div>
     <img id="loadingImg" alt="" src="images/progressBar.gif">
     </div>
 </div>
