--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ jQuery(document).ready(function(){
 <!-- Header Section-->
 <div id="header" dojotype="dijit.layout.BorderContainer" gutters="false" region="top">
     <div id="banner" dojotype="dijit.layout.ContentPane" region="top">
-        <a href="http://www.baltimoresun.com/"><div id="logo"></div></a>
+        <a href="http://www.baltimoresun.com/" target="_blank"><div id="logo"></div></a>
         <div id="headerText">
             <div id="title"></div>
             <div id="subtitle"></div>
